deploy/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${APP}
  name: ${APP}
  namespace: ${PROJECT}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: ${APP}
  template:
    metadata:
      labels:
        app: ${APP}
    spec:
      terminationGracePeriodSeconds: 15 # 终止Pod之前等待的秒数
      containers:
        - name: ${APP}
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:                   
              cpu: ${LIMITS_CPU}
              memory: ${LIMITS_MEMORY}
            requests:                 
              cpu: ${REQUETS_CPU}
              memory: ${REQUETS_MEMORY}
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 1
            failureThreshold: 600              
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3   
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-svc
  namespace: ${PROJECT}
  labels:
    app: ${APP}
spec:
  selector:
    app: ${APP}
  ports:
    - name: http
      protocol: TCP
      port: 80                    #svc端口
      targetPort: 80            # pod端口
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-ingress
  namespace: ${PROJECT}
spec:
  ingressClassName: nginx
  rules:
  - host: sso-demo.jinguobyte.com
    http:
      paths:
      - backend:
          service:
            name: ${APP}-svc
            port:
              number: 80
        path: /
        pathType: Prefix
